# The-N-Body-Problem

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  sophon.py
.github/workflows/: pre-commit.yml  pytest.yml
src/systems/sol/: initial_conditions.py  initial_conditions.yaml
src/the_n_body_problem/: render_animation.py  solve_system.py
src/the_n_body_problem/objects/: __init__.py  body.py  system.py
src/the_n_body_problem/physics/: constants.py  equations.py
tests/the_n_body_problem/: test_objects.py  test_yaml_load.py
tests/the_n_body_problem/data/: test_system_yaml.yaml
